# ultra-nlp

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: dictionary.rs  segment_backward_longest.rs  segment_bidirectional_longest.rs  segment_forward_longest.rs  segment_fully.rs
src/: behavior_for_unmatched.rs  dictionary.rs  error.rs  extract_consecutive_chinese_chars.rs  extract_consecutive_letters.rs  extract_keywords.rs  lib.rs  match.rs  ngrams.rs  segment_backward_longest.rs  segment_bidirectional_longest.rs  segment_forward_longest.rs  segment_fully.rs  text_range.rs  utils.rs
src/_cedarwood/: dictionary.rs  mod.rs  segment_backward_longest.rs  segment_bidirectional_longest.rs  segment_forward_longest.rs  segment_fully.rs
src/_daachorse/: dictionary.rs  segment_backward_longest.rs  segment_bidirectional_longest.rs  segment_forward_longest.rs  segment_fully.rs
src/_hashmap/: dictionary.rs  mod.rs  segment_backward_longest.rs  segment_bidirectional_longest.rs  segment_forward_longest.rs  segment_fully.rs
