[package]
name = "ultra-nlp"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A NLP library."
repository = "https://github.com/BlackGlory/ultra-nlp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daachorse = "1.0.0-rc.1"
yada = "0.5.0"
cedarwood = "0.4.5"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "segment_fully"
harness = false

[[bench]]
name = "segment_forward_longest"
harness = false

[[bench]]
name = "segment_backward_longest"
harness = false

[[bench]]
name = "segment_bidirectional_longest"
harness = false
