[package]
name = "ultra-nlp"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "A NLP library."
repository = "https://github.com/BlackGlory/ultra-nlp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daachorse = "1.0.0"
cedarwood = "0.4.6"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "dictionary"
harness = false

[[bench]]
name = "segment_fully"
harness = false

[[bench]]
name = "segment_forward_longest"
harness = false

[[bench]]
name = "segment_backward_longest"
harness = false

[[bench]]
name = "segment_bidirectional_longest"
harness = false
